--- a/css/producto.css
+++ b/css/producto.css
@@ -20,6 +20,13 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+    transition: all 0.3s;
+
+}
+
+.container-img:hover a img{
+	width: 100%;
+    transform: scale(1.05);
 }
 
 .title-excesive{
