--- a/css/acerca-de.css
+++ b/css/acerca-de.css
@@ -1,52 +1,55 @@
 .content {
-    padding-top: 30px;
-    padding-bottom: 40px;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 10px;
-    text-align: center;
+    margin-right: 45px;
+    margin-left: 45px;
+    margin-bottom: 45px;
     align-items: center;
-    font-size: larger;
-    color: rgb(103, 102, 102);
-    line-height: 1.5;
+    border-radius: 8px; 
+    border: 2px solid transparent;
+    text-align: center;
 }
 
 .content p{
-    text-align: left;
+    text-align: center;
 }
 
 .fundadores-container {
-  display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(2,1fr);
   gap: 1rem;
-  padding-bottom: 30px;
+  padding-top: 40px;
+  padding-bottom: 15px;
+  margin-right: 50px;
+  margin-bottom: 60px;
+  margin-left: 50px;
+  box-shadow: 0px 8px 16px #686868;
+    border-radius: 8px;
+
+    border: 2px solid transparent;
 }
 
 .fundador-card {
-    padding: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
     text-align: center;
     color: black;
     text-decoration: none;
-    border-radius: 0.5rem;
     transition: all 0.3s;
     background-color: rgb(255, 255, 255);
-    max-width: 90%;
     /*display: flex;*/
     /*flex-direction: column;*/
     color: rgb(70, 70, 70);
 }
+
+
 
 .fundador-card img{
     border-radius: 50%;
     align-self: center;
 }
 
-.sombreado{
-    box-shadow: 0px 8px 16px #686868;
+.separador{
+    border-right: 1px solid #b2b2b2;
+    border-left: 1px solid #b2b2b2;
+    border-top: 1px solid #b2b2b2;
+    border-bottom: 1px solid #b2b2b2;
     border-radius: 8px;
-    margin-left: 30px;
-    margin-right: 30px;
-    border: 2px solid transparent;
 }
 
