--- a/css/main-style.css
+++ b/css/main-style.css
@@ -15,3 +15,96 @@
 .nav-animation:hover{
     text-decoration: underline;
 }
+
+
+/*////////////// F O O T E R //////////////*/
+.pie-pagina{
+    width: 100%;
+    background-color: #047049;
+    
+}
+
+.pie-pagina .grupo-1{
+    width: 100%;
+    gap: 30px;
+    justify-content: center;
+    padding-top: 30px;
+    padding-right: 30px;
+    padding-left: 30px;
+}
+
+.logo-footer{
+    display: flex;
+    justify-content: center; 
+    align-items: center;     
+    height: 100%;           
+}
+
+.logo-footer img {
+    max-width: 100%; 
+}
+
+
+.pie-pagina .grupo-1 .box{
+
+    padding-top: 30px;
+    height: 100%;
+    width: 100%;
+}
+
+.pie-pagina .grupo-1 .box h2{
+    color: #e9e9e9;
+    margin-bottom:  25px;
+    font-size: 20px;
+}
+
+.pie-pagina .grupo-1 .box p{
+    color: #e9e9e9;
+    margin-bottom: 10px;
+    
+}
+
+.pie-pagina .grupo-1 .box a{
+    text-decoration: none;
+    
+}
+
+.pie-pagina .grupo-1 .box a:hover{
+    text-decoration: underline;
+    text-decoration-color: #e9e9e9;
+    
+}
+
+.pie-pagina .grupo-1 .box .red-social{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    border-top: 3px solid #034c31;
+}
+
+.pie-pagina .grupo-1 .red-social a{
+    /*display: inline-block;*/
+    text-decoration: none;
+    margin: 15px;
+    transition: all 0.3s ease;
+}
+
+.pie-pagina .grupo-1 .red-social a img{
+
+    width: 40px;
+    height: 40px;
+    transition: all 0.3s ease;
+}
+
+.pie-pagina .grupo-1 .red-social a img:hover {
+    transform: scale(1.15);
+}
+
+.pie-pagina .grupo-2{
+    background-color: #034c31;
+    padding: 15px 10px;
+    text-align: center;
+    color: white;
+}
+
+/*////////////// F O O T E R //////////////
