--- a/css/contacto.css
+++ b/css/contacto.css
@@ -18,8 +18,8 @@
     margin: 0 auto;
     /*margin-top: 75px;*/
     border-radius: 25px;
-    margin-right: 30px;
-    margin-left: 30px;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
 
@@ -49,14 +49,15 @@ label{
     margin-bottom: 15px;
 }
 
-.box{
+.estilo-input{
     border: 0;
-    background-color: rgb(222, 220, 220);
-    padding: 15px;
+    padding: 7px;
     border-radius: 25px;
+    background-color: #ddd;
     margin-bottom: 25px;
     outline: none;
     font-size: 20px;
+    width: 100%;
 }
 
 .submit{
@@ -154,14 +155,13 @@ align-self: center;
     .container-contacto{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(4, auto);
+        grid-template-rows: repeat(2, auto);
         background-color: rgb(255, 255, 255);
         /*height: 1100px;*/
         box-shadow: 0 0 20px rgb(0, 0, 0);
-        margin: 0 auto;
         /*margin-top: 75px;*/
         border-radius: 25px;
-        margin-right: 30px;
-        margin-left: 30px;
+        margin-right: 15px;
+        margin-left:15px;
     }
 }
